Merged PR 1168: feat(gis-service): work with Basemap in project